force-app/main/default/objects/woo__WoopraTrackingSettings__c/woo__WoopraTrackingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Woopra tracking configuration settings</description>
    <label>deprecated_WoopraTrackingSettings</label>
</CustomObject>