force-app/main/default/objects/woo__WoopraTrackingSettings__c/fields/woo__account_sync__c.field-meta.xml
<CustomField>
    <fullName>woo__account_sync__c</fullName>
    <label>Account Sync</label>
    <type>TextArea</type>
</CustomField>