force-app/main/default/objects/woo__WoopraTrackingSettings__c/fields/woo__contact_sync__c.field-meta.xml
<CustomField>
    <fullName>woo__contact_sync__c</fullName>
    <label>Contact Sync</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>