force-app/main/default/objects/woo__WoopraTrackingSettings__c/fields/woo__lead_sync__c.field-meta.xml
<CustomField>
    <fullName>woo__lead_sync__c</fullName>
    <label>Lead Sync</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>