force-app/main/default/objects/woo__WoopraTrackingSettings__c/fields/woo__primary__c.field-meta.xml
<CustomField>
    <fullName>woo__primary__c</fullName>
    <label>Woopra Primary</label>
    <type>TextArea</type>
</CustomField>