force-app/main/default/objects/woo__WoopraTrackingSettings__c/fields/woo__website__c.field-meta.xml
<CustomField>
    <fullName>woo__website__c</fullName>
    <description>Website associated with Woopra</description>
    <label>Website</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>